@@ -1,2 +1,57 @@
-# Inventory-Management-System-Java-JavaFX
+## Inventory-Management-System-Java-JavaFX
 This is a desktop-based Inventory Management System developed using Java and JavaFX. The system allows users to manage product data through a user-friendly GUI and object-oriented back-end logic.
+
+
+## 🗂️ Project Structure
+- `src/`: Contains all the source code (Java classes, logic, controllers, models).
+- `resources/`: Includes GUI-related files (FXML layouts, CSS, images).
+- `jar_file/`: Precompiled `.jar` files for console and GUI versions.
+- `G061_UML.pdf`: Class diagram showing system architecture.
+
+---
+
+### ✅ Dependencies
+
+- [Java SDK 23.0.0 or higher](https://www.oracle.com/java/technologies/downloads/)
+- [JavaFX SDK 17 or higher](https://gluonhq.com/products/javafx/)
+
+---
+
+### ▶️ Run Console Application
+
+```bash
+cd jar_file
+java -jar SMS_Console.jar
+```
+
+```bash
+cd jar_file
+java --module-path "PATH_TO_JAVAFX_LIB" --add-modules javafx.controls,javafx.fxml -jar SMS_UI.jar
+```
+
+```bash
+java --module-path "C:\Users\xxx\Downloads\openjfx-23.0.2_windows-x64_bin-sdk\javafx-sdk-23.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar SMS_UI.jar
+```
+
+### ✨ Features
+- Add, update, and delete products
+- Track product inventory easily
+- JavaFX-powered GUI with clean layout
+- Console-based fallback version available
+- Modular and object-oriented code structure
+
+
+## 🖼️ Screenshot
+
+![Main UI](Screenshots/main-ui.png)
+
+![Add_Product](screenshots/add-product.png)
+
+## 👥 Group Members
+
+| No. | Name             |
+|-----|------------------|
+| 1   | K'NG HUI XUAN    |
+| 2   | LEE ZHI EN       |
+| 3   | TEO QIYANG       |
+| 4   | WONG YEN MING    |
